--- a/deployment/env-secret.yaml
+++ b/deployment/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRES_USERNAME: T3Nhc2Ri
-  POSTGRES_PASSWORD: T3Nhc2VyZTEj
+  POSTGRES_USERNAME: bWljcm9zZXJ2aWNlcw==
+  POSTGRES_PASSWORD: VWRhY2l0eTEyMzQ1
