--- a/deployment/env-configmap.yaml
+++ b/deployment/env-configmap.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: env-configmap
+  name: env-config
 data:
-  POSTGRES_HOST: project3.ck5rjoxyylwz.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: project3-db.c5ciysdu2w1m.us-east-1.rds.amazonaws.com
   POSTGRES_DB: postgres
-  AWS_BUCKET: my-project-3
+  AWS_BUCKET: project3-microservices
   AWS_REGION: us-east-1
   AWS_PROFILE: default
   JWT_SECRET: testing
-  URL: https://281F2868289CB01E364D8D69883EE033.gr7.us-east-1.eks.amazonaws.com
+  URL: https://localhost:8100
